--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
 </head>
 <body>
   <div class="container">
-    <section class="third">
+    <section class="third" id="sedan">
+      <img src="" alt="">
       <h1>Sedans</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
+      <button></button>
     </section>
 
-    <section class="third">
+    <section class="third" id="suv">
+      <img src="" alt="">
       <h1>SUVs</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
+      <button></button>
     </section>
     
-    <section class="third">
+    <section class="third" id="luxury">
+      <img src="" alt="">
       <h1>Luxury</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
+      <button></button>
     </section>
   </div>
   
