--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">drichcodes</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/drichcodes" target="_blank">drichcodes</a>.
   </div>
 </body>
 </html>
